--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "react-native-dnd-board",
+  "name": "react-native-dnd-board-next",
   "version": "0.0.9",
   "description": "Drag and drop Kanban board like Trello",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hungga1711/react-native-dnd-board.git"
-  },
   "keywords": [
     "draggable",
     "board",
@@ -25,14 +17,22 @@
     "task",
     "card"
   ],
-  "author": {
-    "name": "Hung Tran",
-    "email": "hungga1711@gmail.com"
+  "homepage": "https://github.com/phongnguyenmaster/react-native-dnd-board-next#readme",
+  "bugs": {
+    "url": "https://github.com/phongnguyenmaster/react-native-dnd-board-next/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/phongnguyenmaster/react-native-dnd-board-next.git"
   },
   "license": "ISC",
-  "readmeFilename": "README.md",
-  "dependencies": {
-    "react-native-gesture-handler": "^1.10.0",
-    "react-native-reanimated": "2.12.0"
+  "author": "Phong Nguyen <phongnguyenmaster@gmail.com>",
+  "type": "commonjs",
+  "main": "src/index.js",
+  "directories": {
+    "example": "example"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
